_sass/minima/custom-styles.scss
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Condensed&display=swap');


h1,h2,h3,h4,h5,h6,.site-title{
	font-family: 'Roboto Condensed',sans-serif;
}

.logo{
	display:block;
	margin-top:20px;
}

.left{
	float:left;
}

.right{
	float:right;
}

#nearby-locations{
	margin-top:4em;
}

.audio-player{
	margin-bottom:1em;
}

#related{
	margin-top:1em;
	background:#eeeeee;
	padding:.5em;
}

.post-meta{
	color:rgb(87,87,87);
}

.footer-col-wrapper,.social-media-list{
	color:rgb(87,87,87);
}

#floor1,#floor2,#floor3{
	padding:.5em;
}

#floor1{
	border-top:1px solid;
	border-left:1px solid;
	border-right:1px solid;
	h2{
		margin-top:0;
	}
}

#floor2{
background-color:#6A857B;
color:#ffffff;
border-top:1px solid #000000;
border-left:1px solid #000000;
border-right:1px solid #000000;
	h2{
		margin-top:0;
	}
}

#floor3{
background-color:#5F4D76;
color:#ffffff;
border-bottom:1px solid #000000;
border-left:1px solid #000000;
border-right:1px solid #000000;
	h2{
		margin-top:0;
	}
}

.post-feta{
	@extend .post-meta;
	margin-left: .25em;
	background: #eee;
	color: #4F4F4F;
	padding-left: .15em;
	padding-right: .15em;
	padding-top: .05em;
	padding-bottom: .05em;
	border-radius: 3px;
	font-family:'Open Sans',Sans-serif;
	outline: 1px solid;
	margin-bottom:3px;
}

.social-media-list li a{
    display: block;
    padding: 5px;
    border:none;
}

@media (max-width: 640px) {
	.audio-player-spacer{
		margin-bottom:7em;
	}
	.social-media-list{
		margin:0;
	}
}

